--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
  <head>
   <meta charset="utf-8">
-  <title>Тег А, атрибут href</title>
+  <title>Yo!</title>
  </head>
  <body>
  	<p>Мои сайты</p>
