--- a/index.html
+++ b/index.html
@@ -12,6 +12,6 @@
   <p><a href="http://tehi.tech">tehi.tech</a></p>
   <p><a href="http://tehi.me">tehi.me</a></p>
   <p><a href="http://tehi.wtf">tehi.wtf</a></p>
-  <p><a href="http://illl.tk">illl.tk</a></p>
+  <p><a href="https://illl.tk">illl.tk</a></p>
  </body>
 </html>
